<resources>
    <string name="app_name">Teleconsultor</string>

    <!-- Main -->
    <string name="title_in">Teleconsultoria e Diagnóstico</string>
    <string name="acesse">Acessar Conta</string>
    <string name="find">Clínicas</string>
    <string name="atPrim">Atenção Primária</string>
    <string name="saude_wo">Saúde da Mulher</string>
    <string name="saude_bb">Saúde da Criança</string>
    <string name="saude_vo">Saúde do Idoso</string>

    <!-- Strings related to login sccreen-->
    <string name="title_activity_user_login">Acesse sua Conta</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha </string>
    <string name="action_sign_in">ACESSAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta. Escolha uma senha com 04 caracteres ou mais</string>
    <string name="error_incorrect_password">Senha Incorreta</string>
    <string name="error_field_required">Preencha este campo</string>
    <string name="permission_rationale">É necessário conceder permissão de acesso aos contatos</string>
    <string name="forgot_password">Esqueci minha Senha/Email</string>
    <string name="create_account">CADASTRE-SE </string>
    <string name="pop_newU_title">Qual é o Seu Perfil?"</string>
    <string name="pop_newU_sub">Escolha abaixo o tipo do seu perfil profissional</string>
    <string name="title_new_agente">Novo Agente</string>
    <string name="title_new_esp">Novo Especialista</string>
    <string name="recupera_senha">Recuperar sua Senha/Email</string>
    <string name="hint_recupera_senha">Insira o CPF cadastrado</string>
    <string name="btn_enviar">ENVIAR</string>
    <string name="btn_cancela">CANCELAR</string>


    <!--Strings relativas a nav_header-->
    <string name="nome_usuario">Nome do Usuario - Recuperar do BD</string>
    <string name="email_usuario">Email Cadastrado - Recuperar do BD</string>
    <string name="cpf_usuario_ativo">Cpf do Usuário - Recuperar do BD</string>
    <string name="pict">Foto do usuario</string>

    <!--Strings relativas ao drawer_dashboard -->
    <string name="drawer_settings">Alterar seus dados</string>
    <string name="drawer_logout">Fazer logout desta conta</string>

    <!--Strings relativas ao content_dashboard-->
    <string name="verArq">Ver Arquivos</string>
    <string name="new_check">Nova Consulta</string>
    <string name="title_activity_user_dashboard">Área de Trabalho</string>
    <string name="diagn">Novo Diagnóstico</string>
    <string name="relatorio">Relatórios</string>
    <string name="action_settings">Oções</string>
    <string name="navigation_drawer_open">Abrir drawer</string>
    <string name="navigation_drawer_close">Fechar drawer</string>


    <!-- String relativas a tela de usuario logado -->
    <string name="title_logado">Suas Informações</string>
    <string name="edit_info">Editar Dados</string>
    <string name="change_password">Trocar Senha</string>
    <string name="alter_title">ALTERE SUA SENHA</string>
    <string name="alter_confirm">CONFIRMAR</string>
    <string name="alter_quit">CANCELAR</string>


    <!-- Strings related a Novo Usuario -->
    <string name="full_name">Nome Completo</string>
    <string name="cpf">CPF - Apenas Números</string>
    <string name="prof">Profissão</string>
    <string name="id_prof">Número de Conselho</string>
    <string name="tel">Telefone</string>
    <string name="email">Email</string>
    <string name="reg_prof">Registro Profissional</string>
    <string name="password">Senha</string>
    <string name="rep_password">Repita a Senha</string>
    <string name="photo">Insira sua Foto</string>
    <string name="orgao_reg">Órgão e UF do Registro </string>
    <string name="unidade">Unidade de Atendimento</string>
    <string name="tx_cv">Insira seu Curriculo</string>
    <string name="btn_save">SALVAR</string>


    <!--Novo Agente -->
    <string-array name="tipo_profis_agente">
        <item>Sua profissão é:</item>
        <item>Enfermagem</item>
        <item>Tecnico de Enfermagem</item>
        <item>Agente Comunitário de Saúde</item>
        <item>Auxiliar de Enfermagem</item>
    </string-array>


    <!-- Novo Especialista -->
    <string-array name="tipo_profis_especial">
        <item>Sua especialidade é:</item>
        <item>Ortopedia</item>
        <item>Cardiologia</item>
        <item>Neurologia</item>
        <item>Dermatologia</item>
        <item>Clinica Geral</item>
        <item>Odontologia Geral</item>
        <item>Ortodontia</item>
        <item>Periodontia</item>
    </string-array>


    <string-array name="uni_atendimento">
        <item>Unidade de atendimento:</item>
        <item>Freguesia</item>
        <item>Curicica</item>
        <item>Laranjeiras</item>
        <item>Santa Cruz</item>
        <item>Linópolis</item>
    </string-array>





    <!--Strings relativas ao content_nova Consulta-->
    <string name="title_activity_nova_consulta">Nova Consulta</string>
    <string name="ncons">Realize uma Nova Consulta</string>
    <string name="nm_paciente">Nome completo do paciente</string>
    <string name="cpf_pac">CPF do paciente - Apenas numeros</string>
    <string name="data_nasc">Data de nascimento do paciente</string>
    <string name="save">Salvar e Enviar</string>
    <string name="nvConsul_fill">*Preencher os campos abaixo se houver prontuário</string>
    <string name="descreva_caso">Descreva o caso da melhor forma possível</string>


    <!-- Strings relativas ao content novo diagnostico -->
    <string name="nu_prontuario">Numero do prontuário</string>
    <string name="anex_exam">Anexar Exames/Prontuário</string>
    <string name="btn_sol_diagn">e-DIAGNÓSTICO</string>
    <string name="title_activity_novo_diagnostico">Novo Diagnostico</string>

<!-- spinners -->
    <string-array name="spGenero">
        <item>Genero do paciente:</item>
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>

    <string-array name="spRegiaoNucleo">
        <item>Núcleo de Atendimento:</item>
        <item>Rio de Janeiro</item>
        <item>Baixada Fluminense</item>
    </string-array>

    <string-array name="spDuvida">
        <item>Sua dúvida é sobre:</item>
        <item>Fratura</item>
        <item>Dor</item>
        <item>Mobilidade Reduzida</item>
        <item>Vacina</item>
        <item>Exames</item>
        <item>Outros</item>
    </string-array>

    <string-array name="spAreaConsulta">
        <item>Especialidade:</item>
        <item>Enfermagem</item>
        <item>Clinica Geral</item>
        <item>Cardiologia</item>
        <item>Pre-natal</item>
        <item>Ortopedia</item>
        <item>Dermatologia</item>
        <item>Odontologia</item>
        <item>Outros</item>
    </string-array>

    <!--Strings relativas a tela de arquivos-->
    <string name="title_activity_consult_list_view">Lista de Arquivos</string>
    <string name="title_consult_navigation">Consultas</string>
    <string name="title_diagn_navigation">Diagnósticos</string>
    <string name="title_activity_lista_arquivos">Lista de Arquivos</string>


    <!--Strings relativas a tela de localizar clinicas -->
    <string name="title_activity_rota">Localize Unidades</string>
    <string name="title_home_rota">Unidades</string>


    <!--String relativas à tela de relatorios -->
    <string name="title1">Índices desta Conta</string>
    <string name="act_rel_title">Relatorios</string>
    <string name="consul_solicitada">CONSULTAS SOLICITADAS</string>
    <string name="consult_respondida">CONSULTAS RESPONDIDAS</string>
    <string name="consult_aguarda"></string>
    <string name="diag_solicitado">DIAGNÓSTICOS SOLICITADOS</string>
    <string name="diag_respondido">DIAGNÓSTICOS RESPONDIDOS</string>
    <string name="extrair">Extrair Relatório</string>
    <string name="enviar">Compartilhar</string>
    <string name="r_email">Email</string>
    <string name="r_btooth">Bluetooth</string>
    <string name="r_messag">Mensagens</string>
    <string name="r_excel">Excel</string>









</resources>
