<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHeader_avisos"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/avisos" />
        <item
            android:id="@+id/navHeader_clinicas"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/find" />
        <item
            android:id="@+id/navHeader_altDados"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/navHeader_logOut"
            android:icon="@drawable/ic_logout_variant_black_24dp"
            android:title="@string/drawer_logout" />
    </group>


</menu>
