<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dehcors.teleconsultorapp.NewAgente"
    tools:showIn="@layout/activity_new_agente">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
              >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/cpf"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
            />



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/tel"
                android:inputType="phone"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
               />

            <Spinner
                android:id="@+id/newAgente_spProfissao"
                style="@android:style/Widget.Material.Light.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/newAgente_spUnidade"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:inputType="text"
                style="@android:style/Widget.Material.Light.Spinner.Underlined"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                tools:ignore="LabelFor"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:inputType="textWebPassword"
                android:ems="10"
                android:hint="@string/rep_password"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/photo"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageButton
                style="@android:style/Widget.ImageButton"
                android:layout_width="200dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />


            <Button
                android:id="@+id/newAgente_btnSalvar"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/btn_save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
