<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/alter_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/alterSenha_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="INSIRA NOVA SENHA"
        android:inputType="textPassword"
        android:textSize="16sp"
        tools:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/altersenha_repeteSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="REPITA A SENHA"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_alterSenha_cancela"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginRight="32dp"
            android:elevation="2dp"
            android:text="@string/alter_quit"
            android:textColor="@color/colorSecondaryDark"
            android:textColorLink="@color/primaryAcent" />

        <Button
            android:id="@+id/btn_alterSenha_confirma"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:elevation="2dp"
            android:text="@string/alter_confirm"
            android:textColor="@color/colorSecondaryDark"
            android:textColorLink="@color/primaryAcent"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>